# GPTCache_PlatinumBenchmarks

./: .dockerignore  .env.example  .gitignore  Dockerfile  Experiment_report.md  GPTCache_PlatinumBenchmarks_Documentation.md  GPTCache_basic_test.py  README.md  dataset_loading_test.py  docker-compose.yml  gptcache_platinumbench_report.md  gptcache_platinumbench_runs.csv  kaggle_ollama_server.ipynb  ollama_client.py  ollama_test.py  pyproject.toml  requirements.txt  run_report.py  run_with_gptcache.py  sqlite.db  test_all.py
Archive/: ollama_gptcache_exact_match_demo.py  ollama_gptcache_semantic_demo.py  ollama_platinum_verify_demo.py  platinum_gptcache_integration_demo.py
experiments/: experiment.yaml  smoke_test.yaml
pymol-open-source-wheels-main/: desktop.ini
results/tables/: summary.csv
schema/: result.schema.json
scripts/: aggregate.py  check_gpu_status.py  clear_cache.py  optimize_cache.py  plot.py  plot_embedding_comparison.py  run.py  setup_gpu_config.py  smoke_ollama.py  smoke_platinum_ollama.py  validate_config.py
src/: metrics.py  runner.py
src/bench_datasets/: platinum.py
src/cache_strategies/: __init__.py  custom_semantic.py  enhanced_semantic.py  extended.py  none.py  vanilla.py  vanilla_approx.py  vanilla_exact.py
src/models/: ollama.py
tests/: conftest.py  test_cache_strategies_smoke.py  test_metrics.py
tests/fixtures/: tiny_platinum_subset.jsonl
tests/integration/: test_cache_strategies_integration.py  test_end2end_smoke.py  test_runner_cache_integration.py  test_runner_smoke.py
tests/unit/: test_cache_strategies.py  test_extended_strategy.py  test_metrics.py
venv310/: pyvenv.cfg
(+5 files in other folders)
