[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcache-bench"
version = "0.1.0"
description = "Benchmarking framework for semantic caching in LLMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]

[tool.pytest.ini_options]
testpaths = ["tests"]
